2003-04-25  Alfred M. Szmidt  <ams@kemisten.nu>

	* term.h (rdev): Change type to dev_t.

2002-11-20  Roland McGrath  <roland@frob.com>

	* main.c (parse_opt: case ARGP_KEY_SUCCESS): After initializing a new
	bottomhalf, call its assert_dtr hook if TTY_OPEN is set in termflags.

2002-11-19  Roland McGrath  <roland@frob.com>

	* main.c (parse_opt: case ARGP_KEY_SUCCESS): Set tty_arg along with
	tty_type from new argument value.
	Reported by David Walter <dwalter@syr.edu>.

2002-09-10  Marcus Brinkmann  <marcus@gnu.org>

	* hurdio.c (hurdio_writer_loop): Check output_stopped instead termflags.
	Move the code that signals the underlying file to ...
	(hurdio_start_output): ... here.

	* munge.c (input_character): Really toggle USER_OUTPUT_SUSP if
	VSTART == VSTOP.

	* hurdio.c (hurdio_writer_loop): Desert the DTR on all errors, not
	only EIO.
	(hurdio_reader_loop): Likewise.

2002-08-18  Roland McGrath  <roland@frob.com>

	* main.c (main): Open with O_RDWR only for hurdio bottomhalf.

2002-06-25  Roland McGrath  <roland@frob.com>

	* term.h (struct bottomhalf): New member `fini'.
	* hurdio.c (hurdio_fini): New function.
	(hurdio_bottom): Use it.
	* devio.c (devio_fini): New function.
	(devio_bottom): Use it.
	* ptyio.c (ptyio_bottom): Add 0 entry for `fini'.

	* main.c (trivfs_runtime_argp): New variable.
	(options): Add --name/-N and --type/-T options.
	(parse_opt): Collect parsed options in temporary storage and apply
	them only at final success.  For T_HURDIO, allow absent arg.
	For non-startup parsing call, allow any missing args.
	(tty_type_names): New const variable.
	(trivfs_append_args): New function.
	(main): Open underlying node with O_RDWR.
	* hurdio.c (wait_for_dtr): If tty_arg is null, use termctl->underlying
	instead of opening a node by name.
	(hurdio_desert_dtr): If tty_arg is null, don't deallocate ioport.

2002-06-25  Marcus Brinkmann  <marcus@gnu.org>

	* term.h (struct bottomhalf): New member GWINSZ.
	* devio.c (devio_bottom): Add new member.