@@ -1,3 +1,8 @@
+2004-03-05  Marcus Brinkmann  <marcus@gnu.org>
+
+	* term.h (QUEUE_LOWAT): Increase to 200.
+	(QUEUE_HIWAT): Increase to 8100.
+
 2003-04-25  Alfred M. Szmidt  <ams@kemisten.nu>
 
 	* term.h (rdev): Change type to dev_t.
